--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -533,10 +533,12 @@ a.text-danger:hover {
 }
 .bg-primary {
   color: #fff;
-  background-color: #428bca;
+  /*background-color: #428bca;*/
+  background-color: #ba42ca;
 }
 a.bg-primary:hover {
-  background-color: #3071a9;
+/*  background-color: #3071a9;*/
+  background-color: #c92ca7;
 }
 .bg-success {
   background-color: #dff0d8;
