--- a/assets/css/component.css
+++ b/assets/css/component.css
@@ -29,7 +29,7 @@
 
 .cbp-spmenu a:active {
 	background: #afdefa;
-	color: #47a3da;
+	color: #a34db0;
 }
 
 /* Orientation-dependent styles for the content of the menu */
